--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<htmi>
+<head>
+</head>
+<body>
 <h1>홍 승 재 홈페이지</h1>
+<h2>홍 승 재 홈페이지</h2>
+<h3>홍 승 재 홈페이지</h3>
+<h4>홍 승 재 홈페이지</h4>
+<h5>홍 승 재 홈페이지</h5>
+<h6>홍 승 재 홈페이지</h6>
+</body>
+</htmi>  
