--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <htmi>
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">  
 </head>
 <body>
 <h1>홍 승 재 홈페이지</h1>
