--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 </head>
 <body>
 <h1>홍 승 재 홈페이지</h1>
-<h2>홍 승 재 홈페이지</h2>
-<h3>홍 승 재 홈페이지</h3>
-<h4>홍 승 재 홈페이지</h4>
-<h5>홍 승 재 홈페이지</h5>
-<h6>홍 승 재 홈페이지</h6>
+<h1>반갑습니다~ 즐거운 시간 보내세요~<h1>
+<a href="http://www.seoultech.ac.kr">서울과학기술대학교</a><br>
+<a href="https://sungho.hs.kr/home/index.do">성호고등학교</a><br>
+<a href="https://yotube.com">유튜브</a><br>  
 </body>
 </htmi>  
