--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<htmi>
+<html>
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -10,4 +10,4 @@
 <a href="https://sungho.hs.kr/home/index.do">성호고등학교</a><br>
 <a href="https://youtube.com">유튜브</a><br>  
 </body>
-</htmi>  
+</html> 
