--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>반갑습니다~ 즐거운 시간 보내세요~<h1>
 <a href="http://www.seoultech.ac.kr">서울과학기술대학교</a><br>
 <a href="https://sungho.hs.kr/home/index.do">성호고등학교</a><br>
-<a href="https://youtube.com">유튜브</a><br>  
+<a href="https://youtube.com">유튜브</a><br>
+<a href="my.html">내가 좋아하는 것들</a><br>     
 </body>
 </html> 
