--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <a href="http://www.seoultech.ac.kr">서울과학기술대학교</a><br>
 <a href="https://sungho.hs.kr/home/index.do">성호고등학교</a><br>
 <a href="https://youtube.com">유튜브</a><br>
-<a href="my.html">내가 좋아하는 것들</a><br>     
+<a href="my.html">내가 좋아하는 것들</a><br>
+<a href="chart.html">차트 그리기</a><br>  
 </body>
 </html> 
